--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 </div>
                 <div class="divisao-p barrascroll">
                     <p class="p-section1">
-                        Sou uma pessoa apaixonada por tecnologia, criatividade e resolução de problemas. Adoro transformar ideias em soluções funcionais e estéticas, explorando diferentes ferramentas e linguagens para criar projetos impactantes. 
-                        No meu trabalho, busco sempre equilibrar usabilidade e design para entregar experiências únicas.
-                        Quando não estou desenvolvendo, estou aprendendo novas tecnologias, explorando formas de melhorar minhas habilidades ou criando algo que possa inspirar e ajudar outras pessoas. Acredito que cada linha de código carrega a oportunidade de inovar e conectar.
-                        Minha paixão por tecnologia começou na infância, ouvindo meu pai contar histórias fascinantes sobre seu trabalho na Volkswagen, onde ele atuava na área de robótica. Essas conversas despertaram minha curiosidade e me levaram a explorar o mundo da programação e da tecnologia.
-                        Hoje, adoro transformar ideias em soluções criativas e funcionais, sempre buscando equilibrar design, usabilidade e inovação. Meu objetivo é criar projetos que não só resolvam problemas, mas também inspirem e conectem pessoas.
+                        Sou apaixonada por tecnologia, criatividade e resolução de problemas. Gosto de transformar ideias em soluções funcionais e bonitas, sempre equilibrando usabilidade e design para criar experiências únicas.  
+
+                        Minha paixão por tecnologia começou na infância, ouvindo meu pai falar sobre seu trabalho com robótica na Volkswagen. Essas histórias despertaram minha curiosidade e me levaram ao mundo da programação e da tecnologia.  
+                        
+                        Hoje, estou sempre aprendendo algo novo, melhorando minhas habilidades e criando projetos que inspiram e conectam pessoas, unindo inovação, design e funcionalidade.
                     </p>
                 </div>
             </div>
