atualizçao do portfolio

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/favicon-16x16.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/f653952f4f.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <link rel="shortcut icon" href="img/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 <script>
     AOS.init();
 </script>
-    <title>Meu Portfólio</title>
+    <title>Nayra Rodrigues</title>
 </head>
 <body > 
     <header id="topo" class="scroll-top">
@@ -99,7 +99,7 @@
                 <div class="divisao-formacao">
                    <div class="formacao-1">
                     <h2 class="sessao3-h2">Tecnólogo</h2>
-                        <p class="p-sessao3">Análise e desenvolvimento de sitstemas🎓</p>
+                        <p class="p-sessao3">Análise e desenvolvimento de sistemas🎓</p>
                         <p class="p-sessao3">Formação:<strong>2023</strong></p>
                    </div>
                    <div class="formacao-1">
@@ -149,6 +149,17 @@
                     <p>Um site interativo que calcula a quantidade ideal de carne, bebidas e refrigerantes para churrascos, baseado no número de adultos, crianças e na duração do evento.</p>
                       <div class="repositorio">
                           <a href="https://github.com/NayIubriniz/Churrascometro" target="_blank"><span class="span-cod">Ver o código<i class="fa-brands fa-github github" style="color: #B629F8;"></i></span></a>
+                      </div>
+                  </div>
+                  <div class="projetos">
+                    <img src="img/project/Projeto_básico_Workshop.png" alt="Jogo da velha">
+                    <a href="https://nayiubriniz.github.io/Pagina-Workshop-Ficticia/" target="_blank">
+                        <h3>Página Workshop Fictícia</h3>
+                    </a>
+                    <p>Desenvolvi esta página de workshop para demonstrar minhas habilidades em HTML e CSS. O design é responsivo e focado na experiência do usuário, 
+                        com um formulário interativo e uma apresentação clara do conteúdo. O projeto destaca minha capacidade de criar layouts modernos e funcionais para a web.</p>
+                      <div class="repositorio">
+                          <a href="https://github.com/NayIubriniz/Pagina-Workshop-Ficticia.git" target="_blank"><span class="span-cod">Ver o código<i class="fa-brands fa-github github" style="color: #B629F8;"></i></span></a>
                       </div>
                   </div>
                   
