--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
            
             <div class="projetos-container">
                 <div class="projetos">
-                  <img class="projeto-img" src="img/project/Replicando-instagram.png" alt="Projeto 1">
+                  <img class="projeto-img" src="img/project/Replicando-instagram.png" alt="Clone do instagram">
                   <a href="https://nayiubriniz.github.io/Replicando-telaLogin/src/index.html" target="_blank">
                       <h3>Clone do Instagram</h3>
                   </a>
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="projetos">
-                    <img src="img/project/Churrascomêtro-img.png" alt="Jogo da velha">
+                    <img src="img/project/Churrascomêtro-img.png" alt="Churrascômetro">
                     <a href="https://nayiubriniz.github.io/Churrascometro/" target="_blank">
                         <h3>Churrascometro</h3>
                     </a>
@@ -152,7 +152,7 @@
                       </div>
                   </div>
                   <div class="projetos">
-                    <img src="img/project/Projeto_básico_Workshop.png" alt="Jogo da velha">
+                    <img src="img/project/Projeto_básico_Workshop.png" alt="Página workshop Fictícia">
                     <a href="https://nayiubriniz.github.io/Pagina-Workshop-Ficticia/" target="_blank">
                         <h3>Página Workshop Fictícia</h3>
                     </a>
