--- a/index.html
+++ b/index.html
@@ -162,6 +162,19 @@
                           <a href="https://github.com/NayIubriniz/Pagina-Workshop-Ficticia.git" target="_blank"><span class="span-cod">Ver o código<i class="fa-brands fa-github github" style="color: #B629F8;"></i></span></a>
                       </div>
                   </div>
+                  <div class="projetos">
+                    <img src="img/project/Jogo Infantil.png" alt="Jogos infantis de aprendizado">
+                    <a href="https://jogo-infantil.netlify.app/" target="_blank">
+                        <h3>Jogos infantis de aprendizado</h3>
+                    </a>
+                    <p>Este projeto é um jogo educativo desenvolvido com foco em crianças pequenas, com o objetivo de tornar o aprendizado do alfabeto e dos números mais divertido e interativo.
+                         A aplicação apresenta uma interface amigável e colorida, especialmente projetada para atrair a atenção dos pequenos.
+                         O jogo foi inspirado no desejo de ajudar meu sobrinho de 3 anos a explorar o mundo das letras e números de forma dinâmica e criativa.
+                        </p>
+                      <div class="repositorio">
+                          <a href="https://github.com/NayIubriniz/jogo_infantil" target="_blank"><span class="span-cod">Ver o código<i class="fa-brands fa-github github" style="color: #B629F8;"></i></span></a>
+                      </div>
+                  </div>
                   
                 
         </div>
