--- a/CadastrodeClientes.html
+++ b/CadastrodeClientes.html
@@ -12,12 +12,12 @@
 </head>
 <body  id="projetos" data-aos="zoom-in">
     <nav class="project">
-           <a href="index.html" class="link-portfolio">Voltar ao Portfólio</a>
+           <a href="projetos.html" class="link-portfolio">Voltar aos Projetos</a>
     </nav>
     <main>
         <h3 class="h3-projects">Cadastro de Clientes</h3>
         <div class="container-img">
-            <a href="https://cadastro-de-clientes.onrender.com/" target="_blank"><img class="imgs-projetos" src="img/project/Cadastro de clientes.png" alt="imagem tela de cadastro de clientes"></a>
+            <a href="https://cadastro-de-clientes.onrender.com/" target="_blank"><img class="imgs-projetos" src="img/project/Cadastro-clientes.png" alt="imagem tela de cadastro de clientes"></a>
         </div>
         <div class="descricao-projeto">
             <div class="sobre-o-projeto">
