--- a/JogoDaVelha.html
+++ b/JogoDaVelha.html
@@ -15,22 +15,23 @@
            <a href="projetos.html" class="link-portfolio">Voltar aos Projetos</a>
     </nav>
     <main>
-        <h3 class="h3-projects">Churrascomêtro</h3>
+        <h3 class="h3-projects">Jogo da Velha</h3>
         <div class="container-img">
-            <a href="https://nayiubriniz.github.io/Churrascometro/" target="_blank"><img class="imgs-projetos" src="img/project/Churrascomêtro-img.png" alt="imagem churrascômetro"></a>
+            <a href="https://nayiubriniz.github.io/Jogo-da-velha/" target="_blank"><img class="imgs-projetos" src="img/project/Jogo-da-velha.png" alt="imagem site jogo da velha"></a>
         </div>
         <div class="descricao-projeto">
             <div class="sobre-o-projeto">
             <p class="descricao-P">
-            O Churrascômetro é um sistema interativo desenvolvido com HTML, CSS e JavaScript que facilita o planejamento do seu churrasco. Ele calcula automaticamente a quantidade ideal de carne, bebidas alcoólicas e refrigerantes com base no número de adultos e crianças que participarão da festa.
-            Simples, prático e eficiente!
+                Desenvolvi uma versão divertida do clássico jogo da velha,
+                onde os tradicionais 'X' e 'O' foram substituídos por emojis, tornando o jogo mais interativo e visualmente atrativo. Utilizando HTML, CSS e JavaScript, criei uma interface simples e amigável para que os usuários possam jogar facilmente em qualquer dispositivo.
+                Este projeto foca na interação e na personalização,
+                proporcionando uma experiência de jogo divertida e moderna, ao mesmo tempo que mantém a essência do jogo original.
             </p>
             </div>
             <div class="ferramentas">
                 <i class="fa-brands fa-html5"></i>
                 <i class="fa-brands fa-css3-alt"></i>
                 <i class="fa-brands fa-js-square"></i>
-                
             </div>
         </div>
         <div class="repositorios">
@@ -38,7 +39,7 @@
                 
             </div>
             <div>
-                <a href="https://github.com/NayIubriniz/Churrascometro" target="_blank"><span class="span-cod">Ver o código<i class="fa-brands fa-github github" style="color: #B629F8;"></i></span></a>
+                <a href="https://github.com/NayIubriniz/Jogo-da-velha" target="_blank"><span class="span-cod">Ver o código<i class="fa-brands fa-github github" style="color: #B629F8;"></i></span></a>
             </div>
         </div>
     </main>
