--- a/projetoInsta.html
+++ b/projetoInsta.html
@@ -12,7 +12,7 @@
 </head>
 <body  id="projetos" data-aos="zoom-in">
     <nav class="project">
-           <a href="index.html" class="link-portfolio">Voltar ao Portfólio</a>
+           <a href="projetos.html" class="link-portfolio">Voltar aos Projetos</a>
     </nav>
     <main>
         <h3 class="h3-projects">Projeto Clone Instagram</h3>
