--- a/projetoWorkshop.html
+++ b/projetoWorkshop.html
@@ -12,25 +12,24 @@
 </head>
 <body  id="projetos" data-aos="zoom-in">
     <nav class="project">
-           <a href="projetos.html" class="link-portfolio">Voltar aos Projetos</a>
+           <a href="projetos.html" class="link-portfolio">Voltar ao Projetos</a>
     </nav>
     <main>
-        <h3 class="h3-projects">Churrascomêtro</h3>
+        <h3 class="h3-projects">Página Workshop Fictícia</h3>
         <div class="container-img">
-            <a href="https://nayiubriniz.github.io/Churrascometro/" target="_blank"><img class="imgs-projetos" src="img/project/Churrascomêtro-img.png" alt="imagem churrascômetro"></a>
+            <a href="https://nayiubriniz.github.io/Pagina-Workshop-Ficticia/" target="_blank"><img class="imgs-projetos" src="img/project/Workshop.png" alt="imagem site Workshop"></a>
         </div>
         <div class="descricao-projeto">
             <div class="sobre-o-projeto">
             <p class="descricao-P">
-            O Churrascômetro é um sistema interativo desenvolvido com HTML, CSS e JavaScript que facilita o planejamento do seu churrasco. Ele calcula automaticamente a quantidade ideal de carne, bebidas alcoólicas e refrigerantes com base no número de adultos e crianças que participarão da festa.
-            Simples, prático e eficiente!
+                Este projeto é uma página fictícia de workshop desenvolvida exclusivamente com HTML e CSS.
+                O site apresenta informações sobre o evento, destaca a palestrante e inclui um formulário para inscrição.
+                Com um design simples e funcional, é ideal para promover eventos de forma atrativa.
             </p>
             </div>
             <div class="ferramentas">
                 <i class="fa-brands fa-html5"></i>
                 <i class="fa-brands fa-css3-alt"></i>
-                <i class="fa-brands fa-js-square"></i>
-                
             </div>
         </div>
         <div class="repositorios">
@@ -38,7 +37,7 @@
                 
             </div>
             <div>
-                <a href="https://github.com/NayIubriniz/Churrascometro" target="_blank"><span class="span-cod">Ver o código<i class="fa-brands fa-github github" style="color: #B629F8;"></i></span></a>
+                <a href="https://github.com/NayIubriniz/Pagina-Workshop-Ficticia" target="_blank"><span class="span-cod">Ver o código<i class="fa-brands fa-github github" style="color: #B629F8;"></i></span></a>
             </div>
         </div>
     </main>
