--- a/projetos.html
+++ b/projetos.html
@@ -3,9 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="https://kit.fontawesome.com/f653952f4f.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="img/favicon-16x16.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
     <title>Projetos</title>
 </head>
 <body>
-    
+    <nav class="project">
+        <a href="index.html" class="link-portfolio">Voltar ao Portfólio</a>
+ </nav>
+
+ <div class="sessao-4 sessao-all-projects ">
+    <h1 class="h1-section-1 h1-all-projects">Meus Projetos</h1>
+    <div class="projetos-container mobile">
+        <div class="projetos .projeto-mobile">
+          <img class="projeto-img" src="img/project/Replicando-instagram.png" alt=" imagem Clone do instagram">
+              <div class="projeto">
+                  <a href="projetoInsta.html" target="_blank">
+                      <h3>Clone do Instagram</h3>
+                  </a>
+              </div>
+        </div>
+        <div class="projetos">
+          <img class="projeto-img" src="img/project/Cadastro de clientes.png" alt=" imagem Cadastro de clientes">
+          <div class="projeto">
+              <a href="CadastrodeClientes.html" target="_blank">
+                  <h3>Cadastro de Clientes</h3>
+              </a>
+          </div>
+        </div>
+        <div class="projetos">
+            <img class="projeto-img" src="img/project/Churrascomêtro-img.png" alt=" imagem Churrascômetro">
+            <div class="projeto">
+                <a href="projetoChurrascometro.html" target="_blank">
+                    <h3>Churrascometro</h3>
+                </a>
+            </div>
+          </div>
+          <div class="projetos">
+            <img class="projeto-img" src="img/project/Projeto_básico_Workshop.png" alt=" imagem Página workshop Fictícia">
+            <div class="projeto">
+                <a href="projetoWorkshop.html" target="_blank">
+                    <h3>Página Workshop Fictícia</h3>
+                </a>
+            </div>
+          </div>
+          <div class="projetos">
+            <img class="projeto-img" src="img/project/Jogo Infantil.png" alt=" imagem Jogos infantis de aprendizado">
+            <div class="projeto">
+                <a href="jogoInfantil.html" target="_blank">
+                    <h3>Jogos de aprendizado</h3>
+                </a>
+            </div>
+          </div>
+          <div class="projetos">
+            <img class="projeto-img" src="img/project/Jogo-da-velha.png" alt=" imagem Jogos infantis de aprendizado">
+            <div class="projeto">
+                <a href="JogoDaVelha.html" target="_blank">
+                    <h3>Jogo Da Velha</h3>
+                </a>
+            </div>
+          </div>
+</div>
+
 </body>
 </html>
