--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <section id="projetos" data-aos="zoom-in">
             
-        <div class="sessao-4">
+        <div class="sessao-4" id="projetos">
             <h1 class="h1-section-1">Meus Projetos</h1>
             <div class="projetos-container">
                 <div class="projetos">
@@ -145,7 +145,7 @@
                     </div>
                   </div>
                   <div class="projetos">
-                    <img src="img/project/Projeto_básico_Workshop.png" alt="Página workshop Fictícia">
+                    <img src="img/project/Workshop.png" alt="Página workshop Fictícia">
                     <div class="projeto">
                         <a href="projetoWorkshop.html" target="_blank">
                             <h3>Página Workshop Fictícia</h3>
