--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </nav>
         <div class="descricao-header" data-aos="zoom-in">
             <div class="img-principal">
-                <img class="img-portfolio" src="img/imagem-perfil.png" alt="foto de perfil">
-               <a class="cv" href="cv/Curriculo -Nayra Rodrigues Arruda.pdf" target="_blank">Meu CV</a>
+                <img class="img-portfolio" src="img/img-portfolio-03.png" alt="foto de perfil">
+               <a class="cv" href="cv/Curriculo-Nayra Rodrigues Arruda.pdf" target="_blank">Meu CV</a>
             </div>
             <div class="info-portfolio">
                
