--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <div class="descricao-header" data-aos="zoom-in">
             <div class="img-principal">
-                <img class="img-portfolio" src="img/img-portfolio-03.png" alt="foto de perfil">
+                <img class="img-portfolio" src="img/Portfólio-05.jpg" alt="foto de perfil">
                <a class="cv" href="cv/Curriculo-Nayra Rodrigues Arruda.pdf" target="_blank">Meu CV</a>
             </div>
             <div class="info-portfolio">
