--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <i class="fa fa-bars"></i>
             </div>
             <!--Menu-Hamburguer---------->
-            <digit add .v class="div-listas" id="nav-lista">
+            <div class="div-listas" id="nav-lista">
                 <ul class="ul-header nav-lista" id="nav-lista">
                     <li><a href="#sobre">Sobre mim</a></li>
                     <li><a href="#experiencia">Experiências</a></li>
@@ -59,7 +59,7 @@
                 <div class="divisao-h1">
                     <h1 class="h1-section-1">Sobre mim</h1>
                 </div>
-                <div class="divisao-p">
+                <div class="divisao-p barrascroll">
                     <p class="p-section1">
                         Minha paixão por tecnologia começou na infância, ouvindo meu pai falar sobre seu trabalho com robótica na Volkswagen. Essas histórias despertaram minha curiosidade e me levaram ao mundo da programação e da tecnologia.  
                         
