--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
             <!--Menu-Hamburguer---------->
             <div class="div-listas" id="nav-lista">
                 <ul class="ul-header nav-lista" id="nav-lista">
-                    <li><a href="#sobre">Sobre mim</a></li>
-                    <li><a href="#experiencia">Experiências</a></li>
-                    <li><a href="#formacao">Formação</a></li>
-                    <li><a href="#projetos">Projetos</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                    <li><a href="#certificados">Certificados</a></li>
+                    <div class="list-header">
+                        <li><a href="#sobre">Sobre mim</a></li>
+                        <li><a href="#experiencia">Experiências</a></li>
+                        <li><a href="#formacao">Formação</a></li>
+                        <li><a href="#projetos">Projetos</a></li>
+                        <li><a href="#contato">Contato</a></li>
+                        <li><a href="#certificados">Certificados</a></li>
+                    </div>
                 </ul>
             </div>
             <label class="switch">
