--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
                     <div class="carousel-item">
                         <img src="img/certificado-portfólio/Word 2016.png" class="d-block w-100">
                     </div>
+                    <div class="carousel-item">
+                        <img src="img/certificado-portfólio/Certificado-DB-SQL.png" class="d-block w-100">
+                    </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#certificatesCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon"></span>
