atualizando tipografia  e cv

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                         <li><a href="#experiencia">Experiências</a></li>
                         <li><a href="#formacao">Formação</a></li>
                         <li><a href="#projetos">Projetos</a></li>
-                        <li><a href="#contato">Contato</a></li>
                         <li><a href="#certificados">Certificados</a></li>
+                        <li><a href="#contato">Contato</a></li>
+
                     </div>
                 </ul>
             </div>
@@ -120,7 +121,7 @@
         <section id="projetos" data-aos="zoom-in">
             
         <div class="sessao-4" id="projetos">
-            <h1 class="h1-section-1">Meus Projetos</h1>
+            <h1 class="h1-section-1 project">Meus Projetos</h1>
             <div class="projetos-container">
                 <div class="projetos">
                   <img class="projeto-img" src="img/project/Replicando-instagram.png" alt="Clone do instagram">
@@ -183,6 +184,9 @@
             <div id="certificatesCarousel" class="carousel" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <img src="img/certificado-portfólio/Certificado-DB-SQL.png" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
                         <img src="img/certificado-portfólio/Html5.png" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
@@ -202,9 +206,6 @@
                     </div>
                     <div class="carousel-item">
                         <img src="img/certificado-portfólio/Word 2016.png" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/certificado-portfólio/Certificado-DB-SQL.png" class="d-block w-100">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#certificatesCarousel" data-bs-slide="prev">
