--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
             <div id="certificatesCarousel" class="carousel" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <img src="img/certificado-portfólio/Python+Flask.png" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
                         <img src="img/certificado-portfólio/Python Zero_ao_Avançado.png" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
