--- a/projetos.html
+++ b/projetos.html
@@ -90,6 +90,14 @@
                 </a>
             </div>
           </div>
+           <div class="projetos">
+            <img class="projeto-img" src="img/project/tela-inicio-tabuada.png" alt=" imagem Jogos infantis de aprendizado">
+            <div class="projeto">
+                <a href="tabuada.html" target="_blank">
+                    <h3>Tabuada</h3>
+                </a>
+            </div>
+          </div>
 </div>
 <script src="js/script.js"></script>
 </body>
