--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="descricao-header" data-aos="zoom-in">
             <div class="img-principal">
                 <img class="img-portfolio" src="img/imagem-perfil.PNG" alt="foto de perfil">
-               <a class="cv" href="cv/Curriculo-Nayra Rodrigues Arruda.pdf" target="_blank">Meu CV</a>
+               <a class="cv" href="cv/Curriculo -Nayra Rodrigues.pdf" target="_blank">Meu CV</a>
             </div>
             <div class="info-portfolio">
                
